<resources>
    <string name="app_name">Word Play</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="word">输入你想要查询的单词</string>
    <string name="bingAbout">数据来源 : Bing / Youdao</string>

    <!--仿蚂蚁森林-->
    <string name="spd" />
    <string name="original_y" />
    <string name="isUp" />

    <!--图灵机器人-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">发送</string>

    <string-array name="welcome_tips">
        <item>主人，小灵在此等候多时了</item>
        <item>主人，近来一切可好</item>
        <item>亲爱的，我想死你了</item>
        <item>欢迎归来，我亲爱的主人</item>
        <item>我是小灵机器人，很高兴为您服务</item>
    </string-array>


    <string name="iv_launch">launch background</string>
    <string name="iv_logo">main logo</string>
    <string name="iv_nmet">nmet button</string>
    <string name="iv_cet4">cet4 button</string>
    <string name="iv_cet6">cet6 button</string>
    <string name="iv_ietsl">ietsl button</string>
    <string name="iv_gre">gre button</string>
    <string name="iv_geoword">geoword button</string>
    <string name="iv_crt4">crt4 button</string>
    <string name="iv_category">category image</string>
    <string name="no_data">没有查到数据</string>
    <string name="nmet">全国高考英语词汇</string>
    <string name="cet4">大学英语四级词汇</string>
    <string name="cet6">大学英语六级词汇</string>
    <string name="crt4">大学俄语四级词汇</string>
    <string name="geoword">测绘工程专业英语词汇</string>
    <string name="ietsl">雅思词汇</string>
    <string name="gre">美国研究生入学考试词汇</string>
    <string name="unit">Unit</string>
    <string name="iv_word">word list image</string>
    <string name="iv_trans">image_trans</string>
    <string name="btn_previous">previous button</string>
    <string name="tv_back">后退</string>
    <string name="tv_play">播放</string>
    <string name="tv_pause">停止</string>
    <string name="tv_next">前进</string>
    <string name="setting_speak">自动发音</string>
    <string name="setting_speed">播放速度</string>
    <string name="select_speed">选择速度</string>
    <string name="search">search</string>
    <string name="first_page">已经第一页</string>
    <string name="last_page">到达最后一页</string>
    <string name="search_hint">请输入要查询的单词</string>
    <string name="sum_time">累计阅读：</string>
    <string-array name="speed_type">
        <item>极快</item>
        <item>稍快</item>
        <item>普通</item>
        <item>稍慢</item>
        <item>极慢</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_hint">再按一次退出程序</string>
    <string name="toast_too_fast">当前播放速度过快, 无法自动发音, 请调慢速度</string>
    <string name="toast_connect">请检查是否连接网络</string>


    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="add_attention">加关注</string>
    <string name="user_post">职位：word play志愿者</string>
    <string name="user_book">等级：1</string>
    <string name="user_name">我不是药神</string>
    <string name="user_des">热爱生活，青春无悔</string>
    <string name="user_recommend_tip">TA推荐的好书</string>


</resources>
