<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/svmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--如果内容大于一屏，那么滚动效果-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="5dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/top_img"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/iv_logo"
            android:src="@mipmap/main_logo"
            />

        <ImageView
            android:id="@+id/iv_geoword"
            android:layout_below="@id/top_img"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/iv_geoword"
            android:src="@drawable/geo_selector"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_below="@id/iv_geoword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:id="@+id/iv_nmet"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_nmet"
                android:src="@drawable/nmet_selector"
                />

            <ImageView
                android:id="@+id/iv_cet4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_cet4"
                android:src="@drawable/cet4_selector"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_below="@id/lay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/iv_cet6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_cet6"
                android:src="@drawable/cet6_selector"
                />

            <ImageView
                android:id="@+id/iv_ietsl"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_ietsl"
                android:src="@drawable/ietsl_selector"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay3"
            android:layout_below="@id/lay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:id="@+id/iv_gre"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_gre"
                android:src="@drawable/gre_selector"
                />

            <ImageView
                android:id="@+id/iv_crt4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/iv_crt4"
                android:src="@drawable/crt4_selector"
                />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>